[project]
name = "agent-fedor"
version = "0.1.0"
description = "GitHub webhook server for code review via Claude Code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "PyGithub>=2.5.0",
    "PyJWT>=2.10.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
